# markotd

./: AGENTS.md  Cargo.toml  LICENSE.md  Makefile  README.md  common.sh  install.sh  markotd-links.test  markotd-notes.test  markotd.sh  pacman.test  uninstall.sh
markotd.d/: 00_header  10_links  20_status  21_system  22_memory  25_drive_usage  30_notes  31_apt  32_pacman  40_notes
src/: args.rs  cli.rs  config.rs  date.rs  date_time.rs  error.rs  last_updated.rs  lib.rs  main.rs  misc.rs  model.rs  motd.rs  system.rs  template.rs
src/drive/: filesystem.rs  mod.rs  table.rs
src/fs/: command.rs  drive_usage.rs  filesystem.rs  fs_max_length.rs  fs_max_width.rs  metadata.rs  mod.rs  path.rs  table.rs
src/module/: drive_usage.rs  file_watch.rs  header.rs  links.rs  mod.rs  status.rs  update_check.rs
src/modules/: drive_usage.rs  header.rs  links.rs  mod.rs  status.rs  system.rs  update_check.rs
templates/: motd.json  motd.md  motd.md.tmpl  motd.toml.tmpl
