[package]
name = "markotd"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1"
chrono = "0.4"
color-eyre = "0.6"
colored = "2.1"
dirs = "5.0"
dotenvy = "0.15"
filetime = "0.2"
fs-err = "2.11"
hostname = "0.4.0"
itertools = "0.13"
minijinja = "2.3.1"
once_cell = "1.19"
regex = "1.10"
serde = { version = "1.0.210", features = ["derive"] }
systemstat = "0.2"
which = "6.0"
whoami = "1.4"

[dev-dependencies]
assert_fs = "1.0"
