[package]
name = "markotd"
version = "0.2.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.9"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
color-eyre = "0.6.3"
derive_builder = "0.20.2"
dirs = "6.0.0"
dotenvy = "0.15.7"
fs-err = "3.1.0"
hostname = "0.4.0"
itertools = "0.14.0"
minijinja = "2.8.0"
once_cell = "1.21.1"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
systemstat = "0.2.4"
which = "7.0.2"
whoami = "1.6.0"
