[package]
name = "markotd"
version = "0.2.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.2.2"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
color-eyre = "0.6.5"
derive_builder = "0.20.2"
dirs = "6.0.0"
dotenvy = "0.15.7"
fs-err = "3.3.0"
hostname = "0.4.2"
itertools = "0.14.0"
minijinja = "2.18.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
systemstat = "0.2.6"
which = "8.0.2"
whoami = "2.1.1"
